# pypilot-algorithms

./: CMakeLists.txt  README.md  library.properties
.github/workflows/: arduino.yml  linux.yml  wmm-ci.yml
examples/arduino/BasicPilotExample/: BasicPilotExample.ino
examples/arduino/WmmDeclinationExample/: WmmDeclinationExample.ino
examples/linux/: compute_basic_pilot.cpp
extras/wmm_tinier/: LICENSE  README.upstream.md  wmm.h  wmm_core.c  wmm_core_eval.inc  wmm_core_state.inc
src/: pypilot_algorithms.hpp
src/pypilot_algorithms/: absolute_pilot.hpp  angles.hpp  basic_pilot.hpp  control.hpp  filters.hpp  gps_filter.hpp  gps_math.hpp  gps_pilot.hpp  mode_state.hpp  pypilot_filters.hpp  rate_pilot.hpp  servo_rudder.hpp  simple_pilot.hpp  source.hpp  tack.hpp  vmg_pilot.hpp  wind_pilot.hpp  wmm.hpp
tests/: test_angles.cpp  test_basic_pilot.cpp  test_filters.cpp  test_gps_filter.cpp  test_gps_filter_trajectory.cpp  test_gps_math.cpp  test_mode_state.cpp  test_more_pilots.cpp  test_pypilot_filters.cpp  test_servo_rudder.cpp  test_source.cpp  test_tack.cpp  test_wind_pilot.cpp  test_wmm.cpp
